--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 body {
-  font-family: "Lato", sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
 }
 .v-btn {
   text-transform: unset !important;
-  font-family: "Lato", sans-serif !important;
+  font-family: "Montserrat", sans-serif !important;
   letter-spacing: 0 !important;
 }
 
